[package]
name = "cedi"
version = "0.1.0"
description = "A simple ERC20 (fungible) token implementation for NEAR"
repository = "https://github.com/kobby-pentangeli/cedi"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
